# whatever flags you want to pass to the C compiler & linker
CFLAGS = --pedantic -Wall -std=c99 -O2
LDFLAGS = -lm

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = hello fuck
hello_SOURCES = hello.c hello.h
fuck_SOURCES = fuck.c fuck.h
