#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([hello], [1.0], [zhang6333778@gmail.com])

# Initalize Automake
AM_INIT_AUTOMAKE

# We use libraries
AC_PROG_RANLIB

# let`s check for a C++ compiler
AC_LANG(C++)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Let`s specify where the Makefiles should be produce.
AC_CONFIG_FILES([Makefile])
AC_CONFIG_SRCDIR([hello.cpp])
AC_CONFIG_HEADERS([config.h])


# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([sys/time.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
